[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021" # Cargo edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1"}
# Cannot use dynamic linking library with webgl2
# bevy = { version = "0.12.1", features = ["dynamic_linking"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this if using Cargo Workspaces

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3